# RFMS

./: .env  Containerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 8ee7f667f606_create_initial_schema.py
app/: agent.md  config.py  dependencies.py  exceptions.py  main.py
app/api/v1/: router.py
app/api/v1/admin/: invitations.py
app/api/v1/auth/: endpoints.py
app/api/v1/participant/: __init__.py  endpoints.py
app/core/: database.py  security.py
app/models/: __init__.py  admin_user.py  database_utils.py  earning.py  invitation.py  payment.py  referral.py  referral_link.py  user.py
app/schemas/: __init__.py  admin_user.py  auth.py  conversion.py  earning.py  invitation.py  payment.py  referral.py  user.py
app/services/: auth_service.py  email_service.py
tests/: conftest.py  test_placeholder.py
tests/api/v1/: test_auth_participant_flow.py
tests/api/v1/admin/: test_invitations.py
tests/api/v1/auth/: test_registration.py
tests/dependencies/: test_dependencies.py
tests/integration/api/v1/: test_auth_login_endpoint.py
tests/schemas/: test_auth_schemas.py  test_conversion_schema.py
tests/services/: test_auth_service.py  test_auth_service_registration.py  test_auth_service_simple.py
tests/unit/services/: test_auth_service_login.py
